_sass/_landing.sass
html,
body
  height: 100%
  width: 100%
  font-family: 'cpmono_v07plain'

body
  &::after
    content: ""
    position: fixed
    top: 0
    right: 0
    bottom: 0
    left: 0
    z-index: 20
    opacity: 0
    visibility: hidden
    transition: all 0.5s ease-in-out
    background: #fff url(/images/loading.gif) no-repeat center center

  &.fv-loading::after
    visibility: visible
    opacity: 1

header
  position: fixed
  top: 0
  right: 0
  width: 100%
  padding: 33px 20px 0
  box-sizing: border-box
  font-size: 12px
  z-index: 16

  input
    position: fixed
    left: -9999px
    opacity: 0

  nav
    max-width: 940px
    margin: 0 auto

  @media only screen and (min-width: 850px)
    ul
      float: right

      li
        float: left
        padding: 18px 15px
        list-style: none

        &:last-child
          padding: 2px 0 0 18px

          a
            padding: 13px 10px
            border: 3px solid #fff
            transition: all 0.3s ease-in-out

            &:after
              display: none

            &:hover
              box-shadow: inset 0 0 37px 18px #067E6F

      a
        display: block
        color: #fff
        position: relative

        &::after
          content: ""
          display: block
          height: 2px
          position: absolute
          bottom: -5px
          right: 45%
          left: 45%
          background: #fff
          opacity: 0
          visibility: hidden
          transition: all 0.3s ease-in-out

        &:hover
          text-decoration: none
          color: #fff

        &:visited
          color: #fff

        &:hover::after,
        &.fv-on::after
          visibility: visible
          opacity: 1
          right: 0
          left: 0

  @media only screen and (max-width: 849px)
    ul
      position: fixed
      top: 0
      right: 0
      bottom: 0
      width: 250px
      background: #067E6F
      z-index: 3
      transition: all 0.5s ease-in-out
      -webkit-transform: translate(100%, 0)
      transform: translate(100%, 0)

      li
        list-style: none

      a
        color: #fff
        display: block
        padding: 10px 20px
        font-size: 15px

        &:visited
          color: #fff

    .menu-control
      position: absolute
      right: 40px
      top: 50px
      display: block
      width: 30px
      padding: 5px 0
      border: solid #fff
      border-width: 3px 0
      z-index: 3
      cursor: pointer
      -webkit-transform: translate(0, 0)
      transform: translate(0, 0)
      -webkit-transition: all 350ms ease-in-out
      transition: all 350ms ease-in-out

    .menu-control:before
      content: ""
      display: block
      height: 3px
      background: #fff

    .menu-control-close
      position: fixed
      top: 0
      left: 100%
      right: 0
      bottom: 0
      z-index: 2
      background: rgba(0, 0, 0, 0.6)
      -webkit-transition: left 350ms ease-in-out
      transition: left 350ms ease-in-out

    input:checked ~

      nav ul
        -webkit-transform: translate(0%, 0)
        transform: translate(0%, 0)

      .menu-control
        -webkit-transform: translate(-250px, 0)
        transform: translate(-250px, 0)

      .menu-control-close
        left: 0

section
  position: relative
  min-height: 100%
  background-color: #fff
  background-position: top center
  background-attachment: fixed
  background-attachment: scroll
  background-size: cover
  text-align: center

  h2
    font-size: 20px
    text-transform: uppercase
    color: #fff

  ul, ol
    margin: 0

@media only screen and (min-width: 850px)
  .fv-middle
    position: fixed
    top: 50%
    left: 50%
    width: 100%
    max-width: 940px
    transform: translate(-50%, -50%)

.fv-welcome
  background-image: url(/images/bg-welcome.png)
  overflow: hidden

  @media only screen and (max-width: 1280px)
    .fv-middle
      padding: 120px 20px 40px

  p
    color: #AFE2DB
    font-size: 26px
    font-family: 'cpmono_v07light'

  h1
    margin: 20px 0 70px
    padding-top: 14%
    text-indent: -9999px
    overflow: hidden
    background: url(/images/frontinvale.png) no-repeat center center
    background-size: 100%

    @media only screen and (max-width: 1280px)
      margin-bottom: 0px

    + p
      font-size: 40px


  .fv-social
    a
      display: inline-block
      margin: 0 25px

.fv-join,
.fv-maps
  display: block
  max-width: 320px
  margin: 62px auto 50px
  padding: 15px 0 14px
  font-size: 24px
  color: #fff
  background: #067E6F
  transition: all 0.3s ease-in-out

  &:hover
    text-decoration: none
    box-shadow: inset 0 0 40px 5px rgba(0,0,0,0.5)

  &:visited
    color: #fff

.fv-about
  background-image: url(/images/bg-about.png)

  @media only screen and (max-width: 849px)
    padding: 120px 20px 20px

  .fv-middle
    line-height: 1
    background: rgba(255,255,255,0.85)

    @media only screen and (min-width: 850px)
      position: absolute
      max-width: 510px

  h2
    color: #067E6F
    font-size: 40px
    font-family: 'cpmono_v07bold'
    text-transform: inherit
    padding: 47px 22px 52px

  p
    padding: 0 22px 40px
    color: #292929
    font-family: 'cpmono_v07light'
    font-size: 20px
    line-height: 24px

.fv-talkers
  background-image: url(/images/bg-talkers.jpg)

  h2
    padding: 12px 0 22px

    &:first-child
      padding-top: 137px

  ul
    margin: 0 auto
    max-width: 700px
    font-size: 0

    &.fv-speakers
      max-width: 600px

    &.fv-lightning
      padding-bottom: 50px

  li
    display: inline-block
    margin: 0 5px 10px
    max-width: 160px
    position: relative
    overflow: hidden

    &::after
      content: ""
      position: absolute
      top: 0
      right: 0
      bottom: 0
      left: 0
      background: rgba(0,0,0,0.5)
      opacity: 0
      transition: all 300ms ease-in-out

    img
      display: block
      transition: all 2s ease-in-out
      transform: scale(1)

    span
      display: block
      padding: 9px 10px
      color: #067E6F
      font-size: 11px
      background: #fff
      z-index: 1

      @media only screen and (min-width: 850px)
        position: absolute
        top: 50%
        right: 13px
        left: 13px
        opacity: 0
        transition: all 300ms ease-in-out
        transform: translate(0, -50%)

    &:hover
      &::after,
      span
        opacity: 1

      img
        transform: scale(1.5)

.fv-place
  color: #fff
  background-color: #000
  background-image: url(/images/bg-place.png)

  .fv-middle
    position: absolute

  h2
    padding: 127px 0 10px

    small
      display: block

  p
    font-size: 48px

    @media only screen and (max-width: 850px)
      font-size: 32px

  a
    max-width: 360px
    margin: 70px auto 0
    color: #067E6F
    background: #fff

    &:visited
      color: #067E6F

.fv-schedule
  color: #fff
  background-image: url(/images/bg-schedule.png)

  @media only screen and (max-width: 849px)
    padding: 0 20px

  h2
    padding-top: 138px
    padding-bottom: 50px

  ol
    max-width: 700px
    margin: 0 auto
    text-align: left

    li
      list-style: none
      position: relative
      padding: 0 0 37px 36px

      &::after
        content: ""
        position: absolute
        top: 21px
        bottom: 1px
        left: 3px
        display: block
        width: 2px
        background: #fff
        border: solid #000
        border-width: 0 1px

      &::before
        content: ""
        position: absolute
        top: -1px
        left: -6px
        display: block
        width: 18px
        height: 18px
        border-radius: 10px
        border: 2px solid #fff
        box-shadow: 0 0 0px 1px #000, inset 0 0 0 1px #000

      &:last-child::after
        display: none

    h3
      font-size: 20px
      line-height: 24px

      + p
        font-size: 20px
        text-transform: uppercase
        padding-top: 8px
        padding-bottom: 9px
    p
      padding-left: 104px
      padding-right: 60px
      font-size: 14px
      line-height: 17px
      font-family: cpmono_v07light

      span
        text-decoration: underline

$zindex: 15
@for $i from 1 through 15
  .fv-schedule li:nth-child(#{$i})
    z-index: $zindex
  $zindex: $zindex - 1

.fv-sponsors
  background-image: url(/images/bg-sponsors.png)
  h2
    &:first-child
      padding-top: 152px

  ul
    padding: 17px 0 47px 0
    margin: 0 auto
    max-width: 700px

    li
      display: inline-block
      padding: 0 10px 10px
      margin: 0

    &:first-of-type
      padding-top: 10px

    &:nth-of-type(2)
      li
        padding: 0 27px 10px

footer
  position: relative
  padding: 0 0
  text-align: center
  background: #292929

  h2
    padding: 80px 0 46px
    font-size: 20px
    text-transform: uppercase
    color: #fff

  a
    display: inline-block
    margin: 0 30px

    img
      display: block

  p
    padding: 103px 0 27px
    color: #fff
    font-size: 14px
    font-family: cpmono_v07light

